@@ -27,6 +27,7 @@ Changelog
     - [Bugfix] Standard loading of the configuration file works again. (Standard loading was never used with the TYPO3 extension.)
     - [Bugfix] The SQL debugger works again.
     - [Bugfix] Mime type string and file do not overwrite each others anymore.
+    - [Bugfix] K-Type padding for the Hans skin is too small.
 
 4.1.2
     - [Feature] PHP 8.0 support
