@@ -284,7 +284,7 @@ div.kwrapper {
 .kwrapper em.ktype {
     font-style: normal;
     margin: 0 2px;
-    padding-right: 35px;
+    padding-right: 70px;
     padding-left: 10px;
 }
 .kwrapper em.ktype.callback {
