@@ -338,8 +338,8 @@ class Encoding
         }
 
         $result = str_replace(
-            ['\'', "\0", "\xEF", "\xBB", "\xBF"],
-            ["\&#039;", '\' . "\0" . \'', '\' . "\xEF" . \'', '\' . "\xBB" . \'', '\' . "\xBF" . \''],
+            ['&#039;', '\'', "\0", "\xEF", "\xBB", "\xBF"],
+            ["\&#039;", "\&#039;", '\' . "\0" . \'', '\' . "\xEF" . \'', '\' . "\xBB" . \'', '\' . "\xBF" . \''],
             $name
         );
 
